# aterm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  mise.toml  rustfmt.toml  skills-lock.json
.github/workflows/: ci.yml  nightly-perf.yml
assets/fonts/: README.md
crates/aterm-agent/: Cargo.toml
crates/aterm-agent/src/: approval.rs  command.rs  lib.rs  policy.rs  provider.rs  risk.rs  sandbox.rs  sanitizer.rs  secrets.rs  sink.rs  tools.rs  transcript.rs  turn.rs
crates/aterm-agent/src/mcp/: connector.rs  discovery.rs  mod.rs  stdio.rs
crates/aterm-agent/src/provider/: anthropic.rs  openai.rs  sse.rs
crates/aterm-app/: Cargo.toml
crates/aterm-app/src/: agent_runtime.rs  config.rs  editor.rs  main.rs  mcp.rs  routing.rs  session.rs
crates/aterm-bench/: Cargo.toml
crates/aterm-bench/benches/: engine.rs  tier1.rs
crates/aterm-bench/src/: latency.rs  lib.rs  scenario.rs
crates/aterm-core/: Cargo.toml
crates/aterm-core/src/: block.rs  completion.rs  document.rs  editing.rs  engine.rs  highlight.rs  history.rs  input.rs  integration.rs  keys.rs  lib.rs  osc.rs  pty.rs  session.rs  shell_integration.rs  terminal.rs
crates/aterm-core/src/resources/: bash-bootstrap.bash  integration.bash  integration.fish  integration.zsh  zshenv
crates/aterm-tokens/: Cargo.toml
crates/aterm-tokens/src/: lib.rs
crates/aterm-ui/: Cargo.toml
crates/aterm-ui/src/: alloc_probe.rs  app.rs  approval_render.rs  atlas.rs  cell_render.rs  completion_render.rs  components.rs  constraint.rs  editor.rs  fonts.rs  glyph.rs  gpu.rs  grid_render.rs  hit.rs  ime.rs  indicator.rs  input_widget.rs  lib.rs  overlay.rs  present.rs  profiling.rs  prose.rs  recorder.rs  renderer.rs  screens.rs  settings.rs  sidebar.rs  sprite.rs  text.rs  timeline.rs  timeline_render.rs  title_bar.rs  widgets.rs  window.rs  window_frame.rs
docs/: _phase2-review.md  architecture.md
docs/adr/: 0001-language-and-platform.md  0002-render-stack.md  0003-workspace-layout.md  0004-unified-input-model.md  0005-agent-loop-and-providers.md  0006-safety-gate-and-sandbox.md  0007-terminal-engine.md  0008-shell-integration.md  0009-text-and-glyph-pipeline.md  0010-pty-io-concurrency.md  0011-vision-mock-ui-north-star.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design/: design-system.md  tokens.toml
docs/design/vision-mock/: AtermWindow.dc.html  README.md  aterm.dc.html  preview.html
docs/research/: 00-overview.md  01-warp-internals.md  02-render-stack-eval.md  03-pty-vt-rust.md  04-shell-integration.md  05-unified-input-ux.md  06-agent-architecture.md  07-ia-design-language.md  08-text-glyph-rendering.md  09-performance-60fps.md  10-packaging-scaffold.md  11-competitive-landscape.md  12-licensing.md  _gaps.md
docs/tickets/: INDEX.md
docs/tickets/EPIC-1-terminal-core/: TICKET-1.1-pty-spawn.md  TICKET-1.2-term-vt-parse.md  TICKET-1.3-three-thread-split.md  TICKET-1.4-output-coalescing.md  TICKET-1.5-wgpu-displaylink-loop.md  TICKET-1.6-glyph-atlas-grid.md  TICKET-1.7-tier1-iai-benches.md  TICKET-1.8-render-perf-validation.md  TICKET-1.9-ptywrite-pgid.md
docs/tickets/EPIC-10-sessions-sidebar/: TICKET-10.1-session-model.md  TICKET-10.2-sessions-sidebar-ui.md  TICKET-10.3-session-keybindings.md
docs/tickets/EPIC-11-editor-mode/: TICKET-11.1-editor-mode-state-and-file-io.md  TICKET-11.2-editor-writing-surface-ui.md
docs/tickets/EPIC-12-settings-screen/: TICKET-12.1-settings-screen-ui.md  TICKET-12.2-settings-persistence-wiring.md
docs/tickets/EPIC-2-shell-integration-blocks/: TICKET-2.1-osc-filter-nonce.md  TICKET-2.2-shim-extraction-zsh.md  TICKET-2.3-bash-fish-hooks.md  TICKET-2.4-blocklist-sumtree.md  TICKET-2.5-block-lifecycle-altscreen.md  TICKET-2.6-integration-indicator.md  TICKET-2.7-block-timeline-render.md
docs/tickets/EPIC-3-unified-input/: TICKET-3.1-inputmodel-reducer.md  TICKET-3.2-ime-preedit-gate.md  TICKET-3.3-routing-brain-hotkey.md  TICKET-3.4-key-encoder.md  TICKET-3.5-highlight-ghost.md  TICKET-3.6-input-widget-mode-indicator.md  TICKET-3.7-history-ring.md
docs/tickets/EPIC-4-design-system/: TICKET-4.1-tokens-semantic.md  TICKET-4.2-ansi-palettes-theme.md  TICKET-4.3-duo-quattro-fonts.md  TICKET-4.4-nerd-font-constraints.md  TICKET-4.5-sprite-face.md  TICKET-4.6-component-specs.md
docs/tickets/EPIC-5-agent-loop-safety/: TICKET-5.1-llmprovider-trait.md  TICKET-5.10-timeline-transcript.md  TICKET-5.11-approval-autonomy-ux.md  TICKET-5.2-anthropic-provider.md  TICKET-5.3-openai-provider.md  TICKET-5.4-typed-tools.md  TICKET-5.5-risk-gate.md  TICKET-5.6-secrets-sanitizer.md  TICKET-5.7-seatbelt-sandbox.md  TICKET-5.8-turn-loop.md  TICKET-5.9-execution-sinks.md
docs/tickets/EPIC-6-mcp-interop/: TICKET-6.1-mcp-connector.md  TICKET-6.2-local-stdio-mcp.md  TICKET-6.3-mcp-autodiscovery.md
docs/tickets/EPIC-7-perf-harness/: TICKET-7.1-frame-recorder.md  TICKET-7.2-stress-scenarios.md  TICKET-7.3-input-latency-gate.md  TICKET-7.4-resize-shell-matrix.md
docs/tickets/EPIC-8-packaging/: TICKET-8.1-cargo-packager-titlebar.md  TICKET-8.2-ofl-fonts-acknowledgements.md  TICKET-8.3-config-keychain.md  TICKET-8.4-signing-notarization.md  TICKET-8.5-focus-mode-completions.md
docs/tickets/EPIC-9-vision-mock-reskin/: TICKET-9.1-token-reconciliation.md  TICKET-9.2-window-frame-titlebar.md  TICKET-9.3-command-block-reskin.md  TICKET-9.4-input-bar-mode-chip-reskin.md  TICKET-9.5-launch-and-completion.md  TICKET-9.6-agent-transcript-reskin.md  TICKET-9.7-risk-gate-reskin.md  TICKET-9.8-mouse-pointer-plumbing.md  TICKET-9.9-borderless-window-frame.md
