# aterm — native macOS GPU terminal. Virtual workspace manifest.
#
# Dependency direction (NO cycles):
#   app -> {ui, agent}
#   ui  -> {core, tokens}
#   agent -> core
#   bench -> {core}
#
# resolver = "2" is mandatory for the wgpu/winit feature-unification story.
[workspace]
resolver = "2"
members = [
    "crates/aterm-core",
    "crates/aterm-tokens",
    "crates/aterm-agent",
    "crates/aterm-ui",
    "crates/aterm-app",
    "crates/aterm-bench",
]

# Shared package metadata. Each crate sets `xxx.workspace = true`.
[workspace.package]
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["aterm contributors"]
repository = "https://github.com/aterm/aterm"
rust-version = "1.96"

# Centralized external dependency versions. Crates opt in with
# `dep.workspace = true` (plus per-crate features where they differ).
# Caret ranges; cargo resolves the latest compatible patch.
[workspace.dependencies]
# --- core: pty + vt ---
portable-pty = "0.9"
alacritty_terminal = "0.26"
# --- async + http (agent; no network calls yet) ---
# `process` + `io-util` added for the local stdio MCP client (T-6.2): spawn a
# server child and speak newline-delimited JSON-RPC over its stdin/stdout.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --- errors ---
thiserror = "2"
anyhow = "1"
# --- channels ---
crossbeam-channel = "0.5"
# --- unix syscalls (aterm-core, unix-only): foreground-pgroup signalling (T-1.9).
# Pinned to 0.28 to unify with what is already in the tree (via portable-pty).
# `term`+`signal` cover tcgetpgrp + killpg + Signal; `signal` pulls `process`.
nix = { version = "0.28", default-features = false, features = ["term", "signal"] }
# --- ui: window + gpu ---
# winit 0.30 + wgpu 29 are the load-bearing alignment (wgpu 29 targets winit 0.30).
# Keep it. The grid renderer rasterizes glyphs itself via swash (below); glyphon is
# RESERVED for the future proportional agent-prose path (T-3.6/T-4.6) and is pinned
# to the wgpu-29-aligned 0.11 so re-adding it stays trivial - no crate links it today.
winit = "0.30"
wgpu = "29"
glyphon = "0.11"
# swash: CoreType-free glyph rasterization to an 8-bit alpha mask for the grid
# fast-path (T-1.8 GPU half). The grid renderer owns its own atlas + instanced
# wgpu pipeline rather than going through glyphon's whole-buffer reshape; swash
# rasterizes each unique (glyph, face, px) once into the atlas (the typing-lag
# cure - see the render diagnosis). Stays the published 0.2 line.
swash = "0.2"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
# --- logging ---
log = "0.4"
env_logger = "0.11"
# --- profiling: Tracy frame zones (T-1.8 AC4). `tracing` is always on (zero-cost
# with no subscriber); the Tracy layer + subscriber are pulled only behind the
# aterm-ui `tracy` feature (so the default build never compiles the C tracy client).
tracing = "0.1"
tracing-tracy = "0.11"
tracing-subscriber = "0.3"
# --- benches: Tier-1 instruction-count micro-benches (T-1.7). iai-callgrind runs
# under valgrind/callgrind (Linux CI), so it gates PRs noise-immune on shared
# runners; locally (macOS, no valgrind) the harness compiles but does not execute.
iai-callgrind = "0.16"
# --- macOS interop (aterm-ui only, target-gated): the self-bridged CADisplayLink
# vsync clock (T-1.5). These pin winit 0.30's objc2 *0.5* generation EXACTLY
# (objc2 0.5.2 / objc2-foundation 0.2.2 / objc2-quartz-core 0.2.2) so the NSView
# we pull from a winit window and the run-loop types share winit's runtime. Do
# NOT bump to the 0.3.x/objc2-0.6 line here - that is a different, non-interop
# generation (it is what wgpu-hal uses internally). ---
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSRunLoop", "NSString", "NSObjCRuntime"] }
objc2-quartz-core = { version = "0.2", features = ["CADisplayLink"] }
# --- internal crates ---
aterm-core = { path = "crates/aterm-core" }
aterm-tokens = { path = "crates/aterm-tokens" }
aterm-agent = { path = "crates/aterm-agent" }
aterm-ui = { path = "crates/aterm-ui" }

# Workspace-wide lints. Crates opt in with `[lints] workspace = true`.
[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# Thin release profile knobs (perf-oriented; 60fps floor is the headline NFR).
[profile.release]
lto = "thin"
codegen-units = 1
