[package]
name = "aterm-app"
description = "aterm binary: wires ui + agent + core; owns window, 3-thread model, input routing."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aterm"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
aterm-core.workspace = true
aterm-ui.workspace = true
aterm-agent.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
env_logger.workspace = true
