[package]
name = "aterm-app"
description = "aterm binary: wires ui + agent + core; owns window, 3-thread model, input routing."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aterm"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Stream the renderer's frame zones to the Tracy profiler (T-1.8 AC4): build with
# `--features tracy` and run a Tracy server. Off by default - no C client compiled.
tracy = ["aterm-ui/tracy"]

[dependencies]
aterm-core.workspace = true
aterm-ui.workspace = true
aterm-agent.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
env_logger.workspace = true
