[package]
name = "aterm-bench"
description = "aterm criterion benches (VT-parse / OSC / block segmentation throughput)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
aterm-core.workspace = true

[dev-dependencies]
criterion = "0.5"
iai-callgrind.workspace = true

[[bench]]
name = "engine"
harness = false

# Tier-1 instruction-count micro-benches (T-1.7). Runs under valgrind on Linux CI.
[[bench]]
name = "tier1"
harness = false
