[package]
name = "aterm-bench"
description = "aterm criterion benches (VT-parse / OSC / block segmentation throughput)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
aterm-core.workspace = true
# The Tier-2 frame recorder (FrameSample/FrameStats/Refresh) + the live app loop the
# scenario driver replays against - the allowed `aterm-bench -> aterm-ui` graph edge.
aterm-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
# scenario_driver only: winit for the window resize (LogicalSize) it animates; logging.
winit.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
criterion = "0.5"
iai-callgrind.workspace = true

[[bench]]
name = "engine"
harness = false

# Tier-1 instruction-count micro-benches (T-1.7). Runs under valgrind on Linux CI.
[[bench]]
name = "tier1"
harness = false

# The Tier-2 scenario driver (T-7.2): replays the scripted stress scenarios against the
# real app loop on real hardware, dumps JSON + a pass/fail verdict. Nightly-only (needs
# a display/GPU); compiles everywhere, reports "inconclusive" where it cannot present.
[[bin]]
name = "scenario_driver"
path = "src/bin/scenario_driver.rs"

# The input-latency driver (T-7.3): the on-hardware keystroke->glyph software measure.
# Sibling of scenario_driver - same nightly-only, headless-safe (inconclusive, not a
# false pass) shape; dumps the JSON latency report + a pass/fail verdict.
[[bin]]
name = "latency_driver"
path = "src/bin/latency_driver.rs"
