[package]
name = "aterm-core"
description = "aterm engine: PTY, VT/grid, block model, OSC-133/OSC-7 marks. No UI, no LLM."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
portable-pty.workspace = true
alacritty_terminal.workspace = true
# Used in production for the terminal's window-event channel (T-1.2) and in tests
# for the PTY reader helper. The *bounded* reader/model byte channel is T-1.3.
crossbeam-channel.workspace = true
thiserror.workspace = true
log.workspace = true
