[package]
name = "aterm-core"
description = "aterm engine: PTY, VT/grid, block model, OSC-133/OSC-7 marks. No UI, no LLM."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
portable-pty.workspace = true
alacritty_terminal.workspace = true
# Used in production for the terminal's window-event channel (T-1.2) and in tests
# for the PTY reader helper. The *bounded* reader/model byte channel is T-1.3.
crossbeam-channel.workspace = true
thiserror.workspace = true
log.workspace = true

# Unix-only: foreground-process-group lookup (tcgetpgrp) + signalling (killpg) for
# Ctrl-C / agent-cancel (T-1.9). Target-gated so the crate still builds on non-Unix
# (where the signal API compiles as an unsupported stub). nix re-exports `libc`,
# which the model thread uses for the non-blocking poll(POLLOUT) reply-write guard.
[target.'cfg(unix)'.dependencies]
nix.workspace = true
