[package]
name = "aterm-tokens"
description = "aterm design tokens as typed Rust constants (leaf crate; no internal deps)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
